--- a/static/css/main.css
+++ b/static/css/main.css
@@ -125,7 +125,7 @@ a:focus {
     color: #EEE;
     display: block;
     width: 50%;
-    margin: 0 auto;
+    float: left;
     text-align: center;
     margin-top: 28px;
 }
