--- a/static/css/main.css
+++ b/static/css/main.css
@@ -102,7 +102,7 @@ h3 {
 }
 
 a {
-    color: #2980b9;
+    color: #0B9C8F;
     text-decoration: none;
 }
 a:hover,
@@ -138,7 +138,7 @@ a:focus {
 }
 #header h1 a .market {
     font-weight: normal;
-    color: #222;
+    color: #0B9C8F;
 }
 
 
@@ -231,21 +231,21 @@ a:focus {
 form button {
     display: block;
     padding: 7px 20px;
-    color: #EEE;
     font-size: 16px;
     font-weight: 300;
     font-family: Roboto, Arial, sans-serif;
-    background: #1B1E24;
+    color: #1B1E24;
+    background: rgba(0, 0, 0, .05);
     transition: background .15s;
     text-transform: uppercase;
-    text-shadow: 0 0 2px rgba(0, 0, 0, .5);
+    border-radius: 3px;
 }
 .actions a:hover,
 .actions a:focus,
 form button:hover,
 form button:focus {
     text-decoration: none;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(0, 0, 0, .15);
 }
 
 
@@ -262,6 +262,7 @@ form button:focus {
 .box {
     background: #FFF;
     border: 1px solid #DDD;
+    border-top: 3px solid #0AA699;
 }
 .box-in {
     padding: 15px 25px;
@@ -291,10 +292,11 @@ table {
 table tfoot {
     display: none;
 }
-table caption {
+table caption,
+h3 {
     height: 50px;
     line-height: 50px;
-    text-shadow: rgba(255, 255, 255, .7) 0 0 3px;
+    margin: 0;
     color: #333;
     text-transform: uppercase;
     text-align: left;
@@ -330,6 +332,12 @@ table th {
 
 
 
+h3 {
+    margin-bottom: 30px;
+}
+
+
+
 form label {
     display: block;
     color: #55606E;
@@ -341,6 +349,12 @@ form input {
     padding: 6px 11px;
     border-radius: 2px;
     width: 100%;
+    transition: all .15s;
+}
+form input:focus {
+    outline: none;
+    border-color: #0B9C8F;
+    box-shadow: #0B9C8F 0 0 3px;
 }
 .form-error {
     font-size: 13px;
@@ -355,6 +369,12 @@ form button {
     margin-top: 24px;
     border: 0;
     float: right;
+    color: #FFF;
+    background: #0B9C8F;
+}
+form button:hover,
+form button:focus {
+    background: #0AA699;
 }
 
 
