--- a/static/css/main.css
+++ b/static/css/main.css
@@ -130,7 +130,7 @@ a:focus {
     line-height: 60px;
     float: left;
     text-transform: uppercase;
-    text-shadow: 0 0 1px rgba(0, 0, 0, .2);
+    text-shadow: 0 0 1px rgba(0, 0, 0, .15);
 }
 #header h1 a {
     color: #999;
@@ -139,6 +139,7 @@ a:focus {
 #header h1 a .market {
     font-weight: normal;
     color: #0B9C8F;
+    text-shadow: none;
 }
 
 
@@ -267,8 +268,12 @@ form button:focus {
 .box-in {
     padding: 15px 25px;
 }
+.box-in:not(:last-child) h3 {
+    margin-bottom: 0;
+}
 .w50 {
     width: 50%;
+    max-width: 600px;
 }
 .row .w50:first-child {
     margin-right: 1%;
@@ -468,8 +473,41 @@ footer p {
    Responsive Design.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+@media only screen and (max-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
+    #header {
+        height: 120px;
+    }
+    #header h1 {
+        width: 100%;
+        text-align: center;
+    }
+    .actions {
+        float: none;
+        margin: 0 0 20px;
+        height: 40px;
+    }
+    .actions li {
+        margin-right: 5px;
+        margin-left: 0;
+    }
+
+    .w50,
+    .w50.box {
+        width: 100%;
+        float: none;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    .row .w50:not(:last-child) {
+        margin: 0 0 30px;
+    }
+    .w50:after {
+        content: " ";
+        display: block;
+        width: 100%;
+        clear: both;
+    }
 }
 
 @media print,
