--- a/static/css/main.css
+++ b/static/css/main.css
@@ -224,6 +224,9 @@ a:focus {
     float: right;
     margin-top: -65px;
 }
+.box .actions {
+    margin-top: -45px;
+}
 .actions li {
     float: left;
     margin-left: 5px;
@@ -486,6 +489,9 @@ footer p {
         float: none;
         margin: 0 0 20px;
         height: 40px;
+    }
+    .box .actions {
+        display: none;
     }
     .actions li {
         margin-right: 5px;
