--- a/static/css/main.css
+++ b/static/css/main.css
@@ -125,12 +125,22 @@ a:focus {
     border-bottom: 1px solid rgba(255, 255, 255, .5);
 }
 #header h1 {
+    position: relative;
     margin: 0;
     color: #999;
     line-height: 60px;
     float: left;
     text-transform: uppercase;
     text-shadow: 0 0 1px rgba(0, 0, 0, .15);
+}
+#header h1 a:after {
+    content: " ";
+    display: block;
+    width: 100%;
+    background: rgba(255, 255, 255, .3);
+    height: 50%;
+    position: absolute;
+    top: 0;
 }
 #header h1 a {
     color: #999;
@@ -225,13 +235,17 @@ a:focus {
     margin-top: -65px;
 }
 .box .actions {
-    margin-top: -45px;
+    margin-top: 0;
+    position: absolute;
+    right: 25px;
+    top: 20px;
 }
 .actions li {
     float: left;
     margin-left: 5px;
 }
 .actions a,
+.actions span,
 form button {
     display: block;
     padding: 7px 20px;
@@ -270,6 +284,7 @@ form button:focus {
 }
 .box-in {
     padding: 15px 25px;
+    position: relative;
 }
 .box-in:not(:last-child) h3 {
     margin-bottom: 0;
@@ -289,6 +304,46 @@ form button:focus {
 }
 .row .w50 {
     float: left;
+}
+
+
+.rickshaw_graph {
+    position: relative;
+}
+.rickshaw_graph .detail {
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+}
+.rickshaw_graph .detail.inactive,
+.rickshaw_graph .detail .item:empty,
+.rickshaw_graph .detail .item:empty + .dot {
+    display: none;
+}
+.rickshaw_graph .detail .item {
+    position: absolute;
+    background: rgba(255, 255, 255, .8);
+    box-shadow: rgba(0, 0, 0, .3) 0 0 4px;
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    margin: -37px 0 0 -25px;
+    border-radius: 3px;
+}
+.rickshaw_graph .detail .dot {
+    position: absolute;
+    border-style: solid;
+    border-width: 2px;
+    height: 8px;
+    width: 8px;
+    background: #FFF;
+    border-radius: 8px;
+    box-shadow: #FFF 0 0 5px;
+    margin: -4px 0 0 -4px;
+}
+.rickshaw_graph .x_label {
+    display: none;
 }
 
 
@@ -388,10 +443,10 @@ form button:focus {
 
 
 .positive {
-    color: #27ae60;
+    color: #27ae60 !important;
 }
 .negative {
-    color: #c0392b;
+    color: #c0392b !important;
 }
 
 
